# regtechradar

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  regtech.md  regtech_brand_guide.jsx  regtech_features.md  regtechradartodolist.md
apps/collector/: .dockerignore  Dockerfile  README.md  alembic.ini  package.json  pyproject.toml
apps/collector/alembic/: env.py
apps/collector/alembic/versions/: 001_initial_schema.py
apps/collector/sources/: registry.yaml
apps/collector/src/: __init__.py  config.py  main.py
apps/collector/src/db/: __init__.py  connection.py  repositories.py
apps/collector/src/delivery/: __init__.py  digest.py  webhook.py
apps/collector/src/models/: __init__.py  impact.py  source.py  update.py  user.py
apps/collector/src/processing/: __init__.py  classifier.py  dedup.py  embedder.py  impact.py  parser.py  summarizer.py
apps/collector/src/sources/: __init__.py  base.py  bis.py  eba.py  ecb.py  esma.py  eu_official.py  fatf.py  fca.py  fetch_helpers.py  fincen.py  registry.py  rss_generic.py
apps/collector/src/tasks/: __init__.py  celery_app.py  crawl.py  notify.py  process.py
apps/collector/tests/test_db/: __init__.py  test_repositories.py
apps/collector/tests/test_processing/: test_classifier.py  test_dedup.py  test_parser.py
apps/collector/tests/test_sources/: __init__.py  (+2 more)
backend/: .env.example  pyproject.toml  regtech.db
backend/app/: config.py  database.py  deps.py  main.py  models.py  scheduler.py  schemas.py
backend/app/routers/: admin.py  alerts.py  auth.py  regulations.py
backend/app/scrapers/: base.py  eba.py  ecb.py  esma.py  fatf.py  fca.py  fincen.py
backend/app/services/: ai_service.py  auth_service.py  email_service.py
backend/regtech_radar_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+43 files in other folders)
